# cct_python

./: .gitignore  README.md  cookiecutter.json  prompts.yml
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.repo_name }}/examples/: example_01.py
{{ cookiecutter.repo_name }}/tests/: test_utils.py  test_{{ cookiecutter.python_package }} copy.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.python_package }}/: __init__.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.python_package }}/utils/: __init__.py
